--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "browser-unpack": "^1.0.0",
     "browserify": "^8.1.3",
     "ponyfetch": "^1.0.1",
+    "toposort": "^0.2.10",
     "watchify": "^2.3.0"
   },
   "scripts": {
