--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "beefy": "^2.1.3",
     "browser-unpack": "^1.0.0",
     "browserify": "^8.1.3",
+    "browserify-transform-tools": "^1.3.0",
     "ponyfetch": "^1.0.1",
     "toposort": "^0.2.10",
     "watchify": "^2.3.0"
