--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "browser-unpack": "^1.0.0",
     "browserify": "^8.1.3",
     "browserify-transform-tools": "^1.3.0",
+    "chokidar": "^1.0.0-rc3",
+    "event-source": "^0.1.1",
     "ponyfetch": "^1.0.1",
     "toposort": "^0.2.10",
     "watchify": "^2.3.0"
